# flink-kratix-promise

./: .gitignore  README.md  promise.yaml  resource-request.yaml
.github/linters/: .checkov.yaml  .gitleaks.toml  .hadolint.yaml  .yaml-lint.yml
.github/workflow/: docker-publish.yml
.github/workflows/: docker-publish.yml  entrypoint.yml  lint-commit.yml  lint.yml  linter.yml  rust.yml
internal/configure-pipeline/: .env  Cargo.toml  Dockerfile  execute-pipeline
internal/configure-pipeline/dependencies/: cluster-operator.yml
internal/configure-pipeline/driver/: Cargo.toml
internal/configure-pipeline/driver/src/: main.rs
internal/configure-pipeline/kratix_utils/: Cargo.toml
internal/configure-pipeline/kratix_utils/src/: lib.rs
internal/configure-pipeline/kratix_utils/src/pipeline/: mod.rs
internal/configure-pipeline/kratix_utils/src/promise/: mod.rs
internal/configure-pipeline/resources/: minimal-flinkdep-manifest.yaml  properties.toml  status.yaml  values.yml
internal/configure-pipeline/src/: main.rs  properties.txt
internal/configure-pipeline/src/kratix/: mod.rs
internal/configure-pipeline/src/kratix/pipeline/: mod.rs
internal/configure-pipeline/src/kratix/promise/: mod.rs
internal/configure-pipeline/test-input/: object.yaml
internal/configure-pipeline/tests/: mod.rs
internal/configure-pipeline/tests/test-input/: object.yaml
internal/configure-pipeline/tests/test-output/: flink-instance.yaml
internal/scripts/: pipeline-image  pipeline-image.sh
shell/: promise.yaml  resource-request.yaml
shell/internal/configure-pipeline/: Dockerfile  execute-pipeline
shell/internal/scripts/: pipeline-image.sh
(+4 files in other folders)
