[package]
name = "configure-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust2 = "0.7.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }


#[dependencies.kratix-rust]
#git = "https://github.com/opencredo/kratix-rust.git"
