[net]
git-fetch-with-cli = true

[package]
name = "configure-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1

[dependencies]
yaml-rust2 = "0.7.0"
dotenv = "0.15.0"
log = "0.4.21"
serde_yaml = "0.9.34"
kratix_utils = { git = "https://github.com/opencredo/kratix-utils"}
env_logger = "0.11.3"
